# green-credits-mp

./: .env.example  .env.new  .gitignore  Carbon credit sale application - test cases.xlsx  GETTING_STARTED.md  Home.py  README.md  Testcases.xlsx  examples.js  index.js  main.py  output.md  package-lock.json  package.json  pyproject.toml  requirements.txt  run.sh  test.js  your-usage.js
.github/workflows/: buyer_buyer-app.yml  seller_seller-app.yml
.streamlit/: config.toml
app_pages/: Home.py  Market_Watch.py  Payment.py  Registration.py  cultivation_page.py  home_page.py  information_page.py  login_page.py  market_watch_page.py  personal_info_page.py  registration_page.py
pages/: Market_Watch.py  Payment.py  Registration_Page.py
pages/Reference/: Confluence_Page_Translator.py  Jira_Comments_Translator.py  Jira_Issue_Translator.py  Settings.py
src/: batch-processor.js  input.json  ndvi-calculator.js  sentinel-api.js
src/transcribe_test/: config.py
src/transcribe_test/dto/: config_dto.py  jira_comment_dto.py
src/transcribe_test/gui/: actions.py
src/transcribe_test/service/: confluence_service.py  jira_service.py  translator.py
src/transcribe_test/utils/: auth.py
