[tool.poetry]
name = "green-credits-mp"
version = "0.1.0"
description = "App for Farmers to register and manage carbon credits"
authors = ["Jojo Thomas <jojothomas007@gmail.com>"]
readme = "README.md"
packages = [{include = "transcribe_test", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
python-dotenv = "^1.0.1"
openai = "^1.66.3"
pyinstaller = "^6.12.0"
cryptography = "^44.0.2"
streamlit = "^1.44.1"
argostranslate = "^1.9.6"
weasyprint = "^65.1"  #for pdf creation
html2text = "^2025.4.15"
browser-use = "^0.1.45"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
